--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -26,7 +26,7 @@
     </ul> </li>
   <li>FrontController - v3
     <ul>
-      li><a href="/front-controller/v3/members/new-form">회원가입</a></li>
+      <li><a href="/front-controller/v3/members/new-form">회원가입</a></li>
       <li><a href="/front-controller/v3/members">회원목록</a></li> </ul>
   </li>
   <li>FrontController - v4
