--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,8 +41,9 @@
   </li>
   <li>FrontController - v5 - v4
     <ul>
-      <li><a href="/front-controller/v5/v4/members/new-form">회원가입</a></
-      <li><a href="/front-controller/v5/v4/members">회원목록</a></li> </ul>
+      <li><a href="/front-controller/v5/v4/members/new-form">회원가입</a></li>
+      <li><a href="/front-controller/v5/v4/members">회원목록</a></li>
+    </ul>
   </li>
   <li>SpringMVC - v1
     <ul>
